--- a/src/main/resources/static/sys/main.html
+++ b/src/main/resources/static/sys/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>控制台</title>
+    <meta charset="UTF-8">
+    <title>控制台</title>
 </head>
 <body>
-欢迎登录Shiro权限管理系统!
+<h1 style="text-align: center">欢迎登录Shiro权限管理系统!</h1>
+<div style="margin: 0 auto"><img src="../public/xh.jpg"></div>
 </body>
 </html>
