--- a/src/main/resources/static/sys/role.html
+++ b/src/main/resources/static/sys/role.html
@@ -43,12 +43,12 @@
 					<input type="text" class="form-control" v-model="role.roleName" placeholder="角色名称"/>
 				</div>
 			</div>
-			<div class="form-group">
-				<div class="col-sm-2 control-label">所属部门</div>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" style="cursor:pointer;" v-model="role.deptName" @click="deptTree" readonly="readonly" placeholder="所属部门"/>
-				</div>
-			</div>
+<!--			<div class="form-group">-->
+<!--				<div class="col-sm-2 control-label">所属部门</div>-->
+<!--				<div class="col-sm-10">-->
+<!--					<input type="text" class="form-control" style="cursor:pointer;" v-model="role.deptName" @click="deptTree" readonly="readonly" placeholder="所属部门"/>-->
+<!--				</div>-->
+<!--			</div>-->
 			<div class="form-group">
 				<div class="col-sm-2 control-label">备注</div>
 				<div class="col-sm-10">
@@ -62,12 +62,12 @@
 						<ul id="menuTree" class="ztree"></ul>
 					</div>
 				</div>
-				<div class="form-group col-md-6">
-					<strong class="col-sm-5 control-label">数据权限</strong>
-					<div class="col-sm-10">
-						<ul id="dataTree" class="ztree"></ul>
-					</div>
-				</div>
+<!--				<div class="form-group col-md-6">-->
+<!--					<strong class="col-sm-5 control-label">数据权限</strong>-->
+<!--					<div class="col-sm-10">-->
+<!--						<ul id="dataTree" class="ztree"></ul>-->
+<!--					</div>-->
+<!--				</div>-->
 			</div>
 			<div class="form-group">
 				<div class="col-sm-2 control-label"></div>
