--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -120,7 +120,7 @@
 
         <!-- Main content -->
         <section class="content" style="background:#fff;">
-            <iframe scrolling="yes" frameborder="0"
+            <iframe name="myFrame" scrolling="yes" frameborder="0"
                     style="width:100%;min-height:200px;overflow:visible;background:#fff;" :src="main"></iframe>
         </section>
         <!-- /.content -->
