--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="public/css/all-skins.min.css">
     <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/index-self.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -37,7 +38,7 @@
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
-            <div style="float:left;color:#fff;padding:15px 10px;">欢迎 {{user.username}}</div>
+            <div style="float:left;color:#fff;padding:15px 10px; color: #333">欢迎 {{user.username}}</div>
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <li><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
