--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Shiro权限管理系统</title>
+  <title>Shiro 权限管理系统</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="public/css/bootstrap.min.css">
@@ -19,55 +19,81 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+    <style type="text/css">
+        .login-page {
+            background-image: url('./public/img/backImg.jpg');
+            background-size: cover;
+        }
+        .login-logo {
+            color: #fff;
+            text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+        }
+        .login-box-body {
+            border-radius: 10px;
+            box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+            opacity: 0.9;
+        }
+        .col-xs-4 {
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            color: #fff;
+            background: #409EFF;
+            border-radius: 10px;
+            text-align: center;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body class="hold-transition login-page">
-<div class="login-box" id="rrapp" v-cloak>
-  <div class="login-logo">
-      <b>Shiro权限管理系统</b>
-  </div>
-  <!-- /.login-logo -->
-  <div class="login-box-body">
-      <p class="login-box-msg">用户登录</p>
-      <div v-if="error" class="alert alert-danger alert-dismissible">
-        <h4 style="margin-bottom: 0px;"><i class="fa fa-exclamation-triangle"></i> {{errorMsg}}</h4>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" v-model="user.username" placeholder="账号">
-        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="password" class="form-control" v-model="user.password" placeholder="密码">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" v-model="user.captcha" @keyup.enter="login" placeholder="验证码">
-        <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <img alt="如果看不清楚，请单击图片刷新！" class="pointer" :src="src" @click="refreshCode">
-        &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>
-      </div>
-      <div class="checkbox text-left">
-          <label><input type="checkbox" v-model="user.rememberMe" value="true">记住我</label>
-      </div>
-      
-      <div class="row">
-        <div class="col-xs-8">
-          <div class="checkbox icheck">
-          </div>
+    <div class="login-box" id="rrapp" v-cloak>
+        <div class="login-logo">
+            <b>Shiro权限管理系统</b>
         </div>
-        <!-- /.col -->
-        <div class="col-xs-4">
-          <button type="button" class="btn btn-primary btn-block btn-flat" @click="login">登录</button>
-        </div>
-        <!-- /.col -->
-      </div>
-    <!-- /.social-auth-links -->
+        <!-- /.login-logo -->
+        <div class="login-box-body">
+            <p class="login-box-msg">用户登录</p>
+            <div v-if="error" class="alert alert-danger alert-dismissible">
+                <h4 style="margin-bottom: 0px;"><i class="fa fa-exclamation-triangle"></i> {{errorMsg}}</h4>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="text" class="form-control" v-model="user.username" placeholder="账号">
+                <span class="glyphicon glyphicon-user form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="password" class="form-control" v-model="user.password" placeholder="密码">
+                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="text" class="form-control" v-model="user.captcha" @keyup.enter="login" placeholder="验证码">
+                <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <img alt="如果看不清楚，请单击图片刷新！" class="pointer" :src="src" @click="refreshCode">
+                &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>
+            </div>
+            <div class="checkbox text-left">
+                <label><input type="checkbox" v-model="user.rememberMe" value="true">记住我</label>
+            </div>
 
-  </div>
-  <!-- /.login-box-body -->
-</div>
-<!-- /.login-box -->
+            <div class="row">
+<!--                <div class="col-xs-8">-->
+<!--                    <div class="checkbox icheck">-->
+<!--                    </div>-->
+<!--                </div>-->
+                <!-- /.col -->
+                <div class="col-xs-4" @click="login">
+                    登录
+<!--                    <button type="button" class="btn btn-primary btn-block btn-flat" >登录</button>-->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.social-auth-links -->
+
+        </div>
+        <!-- /.login-box-body -->
+    </div>
+    <!-- /.login-box -->
 <script src="public/libs/jquery.min.js"></script>
 <script src="public/libs/vue.min.js"></script>
 <script src="public/libs/bootstrap.min.js"></script>
