--- a/src/main/resources/static/sys/role.html
+++ b/src/main/resources/static/sys/role.html
@@ -20,10 +20,10 @@
 <!--				<input type="text" class="form-control" v-model="q.roleName" @keyup.enter="query" placeholder="角色名称">-->
 <!--			</div>-->
 <!--			<a class="btn btn-default" @click="query">查询</a>-->
-			<button v-if="hasPermission('sys:role:save')" class="btn btn-primary" type="button" @click="add">
+			<button v-if="hasPermission('sys:role:save')" class="btn btn-success" type="button" @click="add">
 				<i class="fa fa-plus"></i><span class="bold"> 新增</span>
 			</button>
-			<button v-if="hasPermission('sys:role:update')" class="btn btn-primary" type="button" @click="update">
+			<button v-if="hasPermission('sys:role:update')" class="btn btn-success" type="button" @click="update">
 				<i class="fa fa-pencil-square-o"></i><span class="bold"> 修改</span>
 			</button>
 			<button v-if="hasPermission('sys:role:delete')" class="btn btn-danger" type="button" @click="del">
@@ -71,7 +71,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-2 control-label"></div>
-				<input type="button" class="btn btn-primary" @click="saveOrUpdate" value="确定"/>
+				<input type="button" class="btn btn-success" @click="saveOrUpdate" value="确定"/>
 				&nbsp;&nbsp;<input type="button" class="btn btn-warning" @click="reload" value="返回"/>
 			</div>
 		</form>
