--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -38,7 +38,7 @@
             height: 40px;
             line-height: 40px;
             color: #fff;
-            background: #409EFF;
+            background: #0960bd;
             border-radius: 10px;
             text-align: center;
             cursor: pointer;
