--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,37 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Shiro权限管理系统</title>
-    <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
     <link rel="stylesheet" href="public/css/font-awesome.min.css">
     <link rel="stylesheet" href="public/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="public/css/all-skins.min.css">
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="stylesheet" href="public/css/index-self.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
-<!-- ADD THE CLASS layout-boxed TO GET A BOXED LAYOUT -->
+
 <body class="hold-transition skin-blue sidebar-mini">
-<!-- Site wrapper -->
 <div class="wrapper" id="dtapp" v-cloak>
+    <!--头部菜单栏-->
     <header class="main-header">
         <a href="index.html" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>Shiro</b></span>
-            <!-- logo for regular state and mobile devices -->
             <span class="logo-lg"><b>Shiro权限管理系统</b></span>
         </a>
-        <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
@@ -47,47 +34,34 @@
             </div>
         </nav>
     </header>
-
-    <!-- =============================================== -->
-
-    <!-- Left side column. contains the sidebar -->
+    <!--侧边栏导航菜单-->
     <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
-            <!-- /.search form -->
-            <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="header">导航菜单</li>
-                <!-- vue生成的菜单 -->
+                <!--通过列表循环出菜单项-->
                 <menu-item :item="item" v-for="item in menuList"></menu-item>
             </ul>
         </section>
-        <!-- /.sidebar -->
     </aside>
-    <!-- =============================================== -->
-    <!-- Content Wrapper. Contains page content -->
+    <!--中间内容区域-->
     <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
         <section class="content-header">
             <ol class="breadcrumb" id="nav_title" style="position:static;float:none;">
-                <li class="active"><i class="fa fa-home"
-                                      style="font-size:20px;position:relative;top:2px;left:-3px;"></i> &nbsp; 首页
+                <li class="active">
+                    <i class="fa fa-home" style="font-size:20px;position:relative;top:2px;left:-3px;"></i>
+                    首页
                 </li>
                 <li class="active">{{navTitle}}</li>
             </ol>
         </section>
-
-        <!-- Main content -->
+        <!--通过 iframe 嵌套页面，当点击菜单栏就传入不同的 url ，显示不同的页面-->
         <section class="content" style="background:#fff;">
             <iframe name="myFrame" scrolling="yes" frameborder="0"
                     style="width:100%;min-height:200px;overflow:visible;background:#fff;" :src="main"></iframe>
         </section>
-        <!-- /.content -->
     </div>
-    <!-- /.content-wrapper -->
 
-    <!-- Add the sidebar's background. This div must be placed
-         immediately after the control sidebar -->
     <div class="control-sidebar-bg"></div>
 
     <!-- 修改密码 -->
@@ -115,8 +89,6 @@
     </div>
 
 </div>
-<!-- ./wrapper -->
-
 
 <script src="public/libs/jquery.min.js"></script>
 <script src="public/libs/vue.min.js"></script>
