--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -4,21 +4,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Shiro 权限管理系统</title>
-  <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="public/css/bootstrap.min.css">
   <link rel="stylesheet" href="public/css/font-awesome.min.css">
   <link rel="stylesheet" href="public/css/AdminLTE.min.css">
-  <!-- AdminLTE Skins. Choose a skin from the css/skins
-       folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="public/css/all-skins.min.css">
   <link rel="stylesheet" href="public/css/main.css">
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+
     <style type="text/css">
         .login-page {
             background-image: url('./public/img/backImg.jpg');
@@ -50,7 +42,7 @@
         <div class="login-logo">
             <b>Shiro权限管理系统</b>
         </div>
-        <!-- /.login-logo -->
+        <!--登录信息填写框-->
         <div class="login-box-body">
             <p class="login-box-msg">用户登录</p>
             <div v-if="error" class="alert alert-danger alert-dismissible">
@@ -77,23 +69,10 @@
             </div>
 
             <div class="row">
-<!--                <div class="col-xs-8">-->
-<!--                    <div class="checkbox icheck">-->
-<!--                    </div>-->
-<!--                </div>-->
-                <!-- /.col -->
-                <div class="col-xs-4" @click="login">
-                    登录
-<!--                    <button type="button" class="btn btn-primary btn-block btn-flat" >登录</button>-->
-                </div>
-                <!-- /.col -->
+                <div class="col-xs-4" @click="login">登录</div>
             </div>
-            <!-- /.social-auth-links -->
-
         </div>
-        <!-- /.login-box-body -->
     </div>
-    <!-- /.login-box -->
 <script src="public/libs/jquery.min.js"></script>
 <script src="public/libs/vue.min.js"></script>
 <script src="public/libs/bootstrap.min.js"></script>
@@ -101,6 +80,7 @@
 <script src="public/libs/fastclick.min.js"></script>
 <script src="public/libs/app.js"></script>
 <script type="text/javascript">
+
 var vm = new Vue({
 	el:'#rrapp',
 	data:{
@@ -115,11 +95,12 @@ var vm = new Vue({
         }
     },
 	methods: {
+	    /*刷新验证码*/
 		refreshCode: function(){
             this.src = "captcha.jpg?t=" + $.now();
 		},
+        /*点击登录后发送 Ajax 请求*/
 		login: function (event) {
-
 		    $.ajax({
                 type: "POST",
                 url: "sys/login",
@@ -128,12 +109,11 @@ var vm = new Vue({
                 contentType: "application/json",
                 cache: false,
                 success: function(result){
-                    if(result.code == 0){//登录成功
+                    if(result.code == 0){   //登录成功
                         parent.location.href ='index.html';
-                    }else{
+                    }else{  /*登录失败返回错误信息*/
                         vm.error = true;
                         vm.errorMsg = result.msg;
-
                         vm.refreshCode();
                     }
                 }
