--- a/src/main/resources/static/sys/main.html
+++ b/src/main/resources/static/sys/main.html
@@ -38,6 +38,7 @@
     </style>
 </head>
 <body>
+<!--首页，展示项目相关信息-->
 <div class="container">
     <div class="title">欢迎登录 Shiro 权限管理系统!</div>
     <div class="info-container">
