--- a/src/main/resources/static/sys/role.html
+++ b/src/main/resources/static/sys/role.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div id="rrapp" v-cloak>
+	<!--增删改按钮区域，通过 Shiro 判断用户是否有权限，有则展示对应按钮-->
 	<div v-show="showList">
 		<div id="toolbar">
 			<button v-if="hasPermission('sys:role:save')" class="btn btn-success" type="button" @click="add">
@@ -26,9 +27,10 @@
 				<i class="fa fa-remove"></i><span class="bold"> 删除</span>
 			</button>
 		</div>
+		<!--角色列表，通过在 js 中获取数据挂载到该元素上面-->
 	    <table id="table"></table>
     </div>
-
+	<!--新增和修改角色时显示该表单-->
 	<div v-show="!showList" class="panel panel-default">
 		<div class="panel-heading">{{title}}</div>
 		<form class="form-horizontal">
@@ -59,11 +61,6 @@
 			</div>
 		</form>
 	</div>
-</div>
-
-<!-- 选择部门 -->
-<div id="deptLayer" style="display: none;padding:10px;">
-	<ul id="deptTree" class="ztree"></ul>
 </div>
 
 <script src="../public/libs/jquery.min.js"></script>
